--- a/app/src/main/assets/js_bridge_test.html
+++ b/app/src/main/assets/js_bridge_test.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=0.5,user-scalable=no"/>
     <!--require dsbridge init js-->
-    <script src="/kitx/js/bridge"></script>
-    <script src="/kitx/js/vconsole"></script>
+    <script src="/kitx/js/eruda"></script>
+
     <!--    <script src="http://wechatfe.github.io/vconsole/lib/vconsole.min.js"></script>-->
 </head>
 <style>
@@ -47,36 +47,31 @@
 <script>
     // js 调用原生 api接口 ---------------------------------------------------------------------------
     function callNativeSyn() {
-        alert(dsBridge.call("hiSyn", "hello world!"))
+        alert("HI")
     }
 
     function callNativeAsyn() {
-        dsBridge.call("hiAsyn","hello world asyn!", function (v) {
-            alert(v)
-        })
+
     }
 
 
     function callProgress() {
-        dsBridge.call("callProgress", function (value) {
-            if(value==0) value="";
-            document.getElementById("progress").innerText = value
-        })
+
     }
 
     function hasNativeMethod(name) {
-        alert(dsBridge.hasNativeMethod(name))
+
     }
 
 //  注册js接口 ---------------------------------------------------------------------------------
 
-    kitx.register('addValue',function(l,r){
-     return l+r;
-    })
+//    kitx.register('addValue',function(l,r){
+//     return l+r;
+//    })
 
-    kitx.registerAsyn('append',function(arg1,arg2,arg3,responseCallback){
-     responseCallback(arg1+" "+arg2+" "+arg3);
-    })
+//    kitx.registerAsyn('append',function(arg1,arg2,arg3,responseCallback){
+//     responseCallback(arg1+" "+arg2+" "+arg3);
+//    })
 
     console.log("hi debug!");
 </script>
