--- a/app/src/main/assets/js_bridge_test.html
+++ b/app/src/main/assets/js_bridge_test.html
@@ -47,7 +47,8 @@
 <script>
     // js 调用原生 api接口 ---------------------------------------------------------------------------
     function callNativeSyn() {
-        alert("HI")
+        console.log("mclclclcl");
+        alert("HI");
     }
 
     function callNativeAsyn() {
